--- a/Template/trip_detail.html
+++ b/Template/trip_detail.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trip Details</title>
 </head>
 <body>
-$END$
+    <h2>{{ trip.name }}</h2>
+    <p>Location: {{ trip.location }}</p>
+    <p>Date: {{ trip.date }}</p>
+    <p>Created by: {{ trip.created_by.full_name }}</p>
 </body>
 </html>
