--- a/Template/profile.html
+++ b/Template/profile.html
@@ -29,12 +29,14 @@
             <a href="{% url 'profile_edit' %}" class="btn btn-primary">Profilni tahrirlash</a>
         </div>
     </div>
+    <div class="mb-3 text-end">
+    <a href="{% url 'create_trip' %}" class="btn btn-success">➕ Sayohat yaratish</a>
+    </div>
 
-    <!-- Foydalanuvchining Sayohatlari -->
+
     <div class="mt-5">
         <h3 class="text-center">Mening Sayohatlarim</h3>
 
-        <!-- Kelayotgan sayohatlar -->
 <h4 class="text-success mt-3">🔹 Rejalashtirilgan sayohatlar</h4>
 {% if upcoming_trips %}
     <ul class="list-group">
@@ -54,7 +56,6 @@
     <p class="text-muted">Sizda rejalashtirilgan sayohatlar yo‘q.</p>
 {% endif %}
 
-<!-- O‘tib ketgan sayohatlar -->
 <h4 class="text-danger mt-4">🔻 O‘tib ketgan sayohatlar</h4>
 {% if past_trips %}
     <ul class="list-group">
