--- a/Template/trip_list.html
+++ b/Template/trip_list.html
@@ -94,7 +94,7 @@
         <ul>
             <li><a href="{% url 'profile' %}">Profil</a></li>
             <li><a href="{% url 'trip_list' %}">Sayohatlar</a></li>
-            <li><a href="{% url 'trip_list' %}">O'tib ketgan sayohatlar</a></li>
+            <li><a href="{% url 'past_trips' %}">O'tib ketgan sayohatlar</a></li>
         </ul>
     </nav>
     <h2>🌍 Ajoyib sayohatlar bilan tanishing</h2>
