profile update html

--- a/Template/profile.html
+++ b/Template/profile.html
@@ -32,6 +32,9 @@
     <div class="mb-3 text-end">
     <a href="{% url 'create_trip' %}" class="btn btn-success">➕ Sayohat yaratish</a>
     </div>
+    <div class="mb-3 text-end">
+    <a href="{% url 'send_greeting' %}" class="btn btn-success">➕ Tug'ulgan kun tabriklash</a>
+    </div>
 
 
     <div class="mt-5">
