--- a/Template/trip_list.html
+++ b/Template/trip_list.html
@@ -95,6 +95,7 @@
             <li><a href="{% url 'profile' %}">Profil</a></li>
             <li><a href="{% url 'trip_list' %}">Sayohatlar</a></li>
             <li><a href="{% url 'past_trips' %}">O'tib ketgan sayohatlar</a></li>
+            <li><a href="{% url 'greetings_list' %}">Tabriklar</a></li>
         </ul>
     </nav>
     <h2>🌍 Ajoyib sayohatlar bilan tanishing</h2>
